--- a/financial/index.html
+++ b/financial/index.html
@@ -11,13 +11,13 @@
     <!-- Compatibilidade com o Internet Explorer -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Descrição para a busca -->
-    <meta name="description" content="Estética e Maquiagem é com a Estetigabs!">
+    <meta name="description" content="Aplicativo para controle financeiro de gastos e receitas.">
     <!-- Para o Google indexar e seguir todas as páginas e links -->
     <meta name="robots" content="index, follow">
     <!-- Miniatura -->
     <meta name="og:title" content="MeFinance">
     <meta name="og:description" content="Aplicativo para controle financeiro de gastos e receitas.">
-    <meta name="og:image" content="https://estetigabs.netlify.app/assets/logo_vinho-DHy5qqd9.png">
+    <meta name="og:image" content="https://mefinance.netlify.app/assets/favicon-cvikrslr.ico">
     <!-- Cor do topo do navegador -->
     <meta name="theme-color" content="#4caf50">
     <title>MeFinance</title>
